fixed cytoscape IE bug, ui fixes for spacing
git-svn-id: https://svn-bccfr.uis.georgetown.edu/svn/gdoc/webapp/trunk@578 7e94895d-eddb-4489-9ea7-1067dfd99f16

--- a/web-app/css/styles.css
+++ b/web-app/css/styles.css
@@ -85,7 +85,7 @@ p
 }
 
 .welcome {
-	width: 650px;
+	width: 92%;
 }
 
 .welcomeTitle {
@@ -99,12 +99,12 @@ p
 }
 
 .notifications {
-	width: 450px;
+	width: 92%;
 	font-size:12px;
 }
 
 .invitations {
-	width: 620px;
+	width: 92%;
 	font-size:12px;
 }
 .inviteDiv {
@@ -158,6 +158,7 @@ p
 	font-size: .8em;
 	border: 1px solid #CCCCCC;
 	border-collapse: collapse;
+	
 }
 .label {
 	font-weight: bold;
